Bug 196650 - [PATCH] Display progress during getmemsize() so the kernel doesn't look like it hanged
Summary: [PATCH] Display progress during getmemsize() so the kernel doesn't look like ...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: John Baldwin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-12 18:36 UTC by Ravi Pokala
Modified: 2015-03-12 15:12 UTC (History)
6 users (show)

See Also:
jhb: mfc-stable10+
jhb: mfc-stable9+


Attachments
Display progress when mapping in memory (1.43 KB, patch)
2015-01-15 06:51 UTC, Ravi Pokala
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ravi Pokala 2015-01-12 18:36:26 UTC
Several people have noticed that there can be a long, silent pause early in
boot on amd64 systems with large amounts of physical RAM. This is while all the
memory ranges are getting mapped in. Even with the memory tests disabled, this
can take a noticeably long time, to the point that its easy to think that the
kernel has stopped booting. The attached patch provides a basic progress
indicator (print a dot as every GB is mapped), so it is obvious that progress
actually is being made.

Environment:
FreeBSD 11.0-CURRENT
Comment 1 Gavin Atkinson freebsd_committer freebsd_triage 2015-01-12 18:48:52 UTC
Hi,

Due to an issue with the backend FreeBSD Bugzilla database, your original PR and any updates to it since have been lost.  I've recreated the original PR as best as I can, however any attachments and updates you submitted to the PR have been lost.  Please could you resubmit them?

Thanks, and apologies.
Comment 2 Ravi Pokala 2015-01-15 06:49:59 UTC
Discussed and reworked on freebsd-hackers:

https://lists.freebsd.org/pipermail/freebsd-hackers/2015-January/046815.html
Comment 3 Ravi Pokala 2015-01-15 06:51:16 UTC
Created attachment 151655 [details]
Display progress when mapping in memory

Discussed on freebsd-hackers:

https://lists.freebsd.org/pipermail/freebsd-hackers/2015-January/046815.html

Reworked patch attached - thanks jhb!
Comment 4 commit-hook freebsd_committer freebsd_triage 2015-01-25 20:17:18 UTC
A commit references this bug:

Author: jhb
Date: Sun Jan 25 20:16:46 UTC 2015
New revision: 277713
URL: https://svnweb.freebsd.org/changeset/base/277713

Log:
  If the boot-time memory test is enabled, output a dot ('.') for
  each GB of RAM tested so people watching the console can see that
  the machine is making progress and not hung.

  PR:		196650
  Submitted by:	Ravi Pokala <rpokala@panasas.com>
  Suggestions from:	Eric van Gyzen <eric@vangyzen.net>
  MFC after:	2 weeks

Changes:
  head/sys/amd64/amd64/machdep.c
Comment 5 commit-hook freebsd_committer freebsd_triage 2015-03-12 15:09:09 UTC
A commit references this bug:

Author: jhb
Date: Thu Mar 12 15:08:25 UTC 2015
New revision: 279921
URL: https://svnweb.freebsd.org/changeset/base/279921

Log:
  MFC 277713:
  If the boot-time memory test is enabled, output a dot ('.') for
  each GB of RAM tested so people watching the console can see that
  the machine is making progress and not hung.

  PR:		196650

Changes:
_U  stable/10/
  stable/10/sys/amd64/amd64/machdep.c
_U  stable/9/sys/
  stable/9/sys/amd64/amd64/machdep.c